--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <gson.version>2.3.1</gson.version>
         <postgresql.version>9.1-901-1.jdbc4</postgresql.version>
         <hibernate.version>4.3.10.Final</hibernate.version>
+        <log4j.version>1.2.17</log4j.version>
     </properties>
 
 
@@ -52,6 +53,25 @@
             <artifactId>hibernate-core</artifactId>
             <version>${hibernate.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.eclipse.jetty.websocket</groupId>
+            <artifactId>websocket-servlet</artifactId>
+            <version>${jetty.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.eclipse.jetty.websocket</groupId>
+            <artifactId>websocket-server</artifactId>
+            <version>${jetty.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>${log4j.version}</version>
+        </dependency>
+
     </dependencies>
 
 
